config file separate from main spec

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 node_modules/
+cypress/downloads/
 cypress/e2e/
+cypress/screenshots/
 !cypress/e2e/ExampleSpec.cy.js
 melhorias.md
+cypress/support/tracking.service.ts
+cypress/config/configSpec.js
