--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "author": "Ricardo Belinato <ricbelinato@gmail.com>",
   "license": "",
-
   "devDependencies": {
-    "cypress": "^13.13.3"
+    "cypress": "^13.13.3",
+    "cypress-iframe": "^1.0.1"
   }
 }
