--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "author": "Ricardo Belinato <ricbelinato@gmail.com>",
   "license": "",
   "devDependencies": {
-    "cypress": "^13.13.3",
+    "cypress": "^14.0.1",
     "cypress-iframe": "^1.0.1"
+  },
+  "dependencies": {
+    "inquirer": "^12.4.1"
   }
 }
