--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "license": "",
   "devDependencies": {
     "cypress": "^14.0.1",
-    "cypress-iframe": "^1.0.1"
+    "cypress-iframe": "^1.0.1",
+    "lighthouse": "^12.3.0"
   },
   "dependencies": {
+    "chrome-launcher": "^1.1.2",
     "inquirer": "^12.4.1"
   }
 }
