--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "devDependencies": {
     "cypress": "^14.0.1",
     "cypress-iframe": "^1.0.1",
-    "lighthouse": "^12.3.0"
+    "lighthouse": "^12.3.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "chrome-launcher": "^1.1.2",
